--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - python manage.py migrate
-  - python manage.py test
+  - python sudoku_solver/manage.py migrate
+  - python sudoku_solver/manage.py test
